--- a/Qiskit Summer School Final Project VQE.ipynb
+++ b/Qiskit Summer School Final Project VQE.ipynb
@@ -2,15 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ibmqfactory.load_account:WARNING:2020-08-05 23:06:49,909: Credentials are already in use. The existing account in the session will be replaced.\n"
+     ]
+    }
+   ],
    "source": [
     "from qiskit import BasicAer, Aer, IBMQ\n",
     "from qiskit.aqua import QuantumInstance, aqua_globals\n",
     "from qiskit.aqua.algorithms import VQE, ExactEigensolver\n",
     "from qiskit.aqua.components.initial_states import Zero\n",
-    "from qiskit.aqua.components.optimizers import COBYLA, L_BFGS_B, SLSQP, SPSA\n",
+    "from qiskit.aqua.components.optimizers import COBYLA, L_BFGS_B, SLSQP, SPSA, CRS\n",
     "from qiskit.aqua.components.variational_forms import RY, RYRZ, SwapRZ\n",
     "from qiskit.aqua.operators import WeightedPauliOperator, Z2Symmetries\n",
     "from qiskit.chemistry import FermionicOperator\n",
@@ -26,6 +34,7 @@
     "from qiskit.providers.aer.noise.errors import thermal_relaxation_error\n",
     "\n",
     "from qiskit.providers.aer import noise\n",
+    "IBMQ.save_account('f956c6bf5397b049e5df47cbbf32ec3d187c355e13e7d20b3665da9b4e4378dcd820fbb73a3808bc83724542c79975ee742a14dd10f4067f44e49541a8e86799', overwrite=True)\n",
     "provider = IBMQ.load_account()\n",
     "\n",
     "import numpy as np\n",
@@ -56,7 +65,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver = PySCFDriver(atom='Li .0 .0 .0; H .0 .0' + str(inter_dist), unit=UnitsType.ANGSTROM, charge=0, spin=0, basis='sto3g')"
+    "inter_dist = 1.5108585"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-4.74672736  0.10910944  0.16802524  0.          0.         -0.02676891\n",
+      "   0.          0.          0.          0.          0.          0.        ]\n",
+      " [ 0.10910944 -1.52771478  0.0353301   0.          0.         -0.07955265\n",
+      "   0.          0.          0.          0.          0.          0.        ]\n",
+      " [ 0.16802524  0.0353301  -1.1317496   0.          0.          0.0321057\n",
+      "   0.          0.          0.          0.          0.          0.        ]\n",
+      " [ 0.          0.          0.         -1.14428889  0.          0.\n",
+      "   0.          0.          0.          0.          0.          0.        ]\n",
+      " [ 0.          0.          0.          0.         -1.14428889  0.\n",
+      "   0.          0.          0.          0.          0.          0.        ]\n",
+      " [-0.02676891 -0.07955265  0.0321057   0.          0.         -0.93545574\n",
+      "   0.          0.          0.          0.          0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "  -4.74672736  0.10910944  0.16802524  0.          0.         -0.02676891]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.10910944 -1.52771478  0.0353301   0.          0.         -0.07955265]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.16802524  0.0353301  -1.1317496   0.          0.          0.0321057 ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.         -1.14428889  0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.         -1.14428889  0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "  -0.02676891 -0.07955265  0.0321057   0.          0.         -0.93545574]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "molecular_coordinates = 'Li 0 0 0; H ' + str(inter_dist) + ' 0 0'\n",
+    "\n",
+    "distance_unit = UnitsType.ANGSTROM\n",
+    "\n",
+    "basis = 'sto3g'\n",
+    "\n",
+    "driver = PySCFDriver(molecular_coordinates, unit=distance_unit)\n",
+    "\n",
+    "molecule = driver.run()\n",
+    "\n",
+    "h1 = molecule.one_body_integrals\n",
+    "\n",
+    "print(h1)"
    ]
   },
   {
@@ -68,12 +129,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# please be aware that the idx here with respective to original idx\n",
-    "freeze_list = [0]\n",
+    "freeze_list = [0, 6]\n",
     "remove_list = [-3, -2] # negative number denotes the reverse order"
    ]
   },
@@ -86,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,9 +270,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/simplicity/.local/lib/python3.6/site-packages/qiskit/providers/aer/noise/device/basic_device_model.py:115: DeprecationWarning: This function is been deprecated and moved to a method of the`NoiseModel` class. For equivalent functionality use `NoiseModel.from_backend(properties, **kwargs).\n",
+      "  DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "#Define our noise model based on the ibmq_essex chip\n",
     "chip_name = 'ibmq_essex'\n",
@@ -243,9 +313,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-10-7cd93c7b6cd5>, line 71)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-7cd93c7b6cd5>\"\u001b[0;36m, line \u001b[0;32m71\u001b[0m\n\u001b[0;31m    var_form =\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Classically solve for the lowest eigenvalue\n",
     "# This is used just to compare how well you VQE approximation is performing\n",
@@ -313,17 +392,19 @@
     "ref = exact_solver(qubitOp)\n",
     "\n",
     "# Specify your initial state\n",
-    "init_state = \n",
+    "init_state = HartreeFock(num_orbitals=4, num_particles=2, qubit_mapping='parity')\n",
     "\n",
     "# Select a state preparation ansatz\n",
     "# Equivalently, choose a parameterization for our trial wave function.\n",
-    "var_form = \n",
+    "var_form = UCCSD(num_orbitals=4, num_particles=2, qubit_mapping='parity',\n",
+    "                      excitation_type='s', method_singles='beta',\n",
+    "                      initial_state=init_state, two_qubit_reduction=False, reps=2)\n",
     "\n",
     "# Choose where to run/simulate our circuit\n",
-    "quantum_instance = \n",
+    "quantum_instance = Aer.get_backend('qasm_simulator')\n",
     "\n",
     "# Choose the classical optimizer\n",
-    "optimizer =\n",
+    "optimizer = \n",
     "\n",
     "# Run your VQE instance\n",
     "vqe = VQE(qubitOp, var_form, optimizer)\n",
@@ -385,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
