Update Qiskit Summer School Final Project VQE.ipynb

--- a/Qiskit Summer School Final Project VQE.ipynb
+++ b/Qiskit Summer School Final Project VQE.ipynb
@@ -34,7 +34,7 @@
     "from qiskit.providers.aer.noise.errors import thermal_relaxation_error\n",
     "\n",
     "from qiskit.providers.aer import noise\n",
-    "IBMQ.save_account('f956c6bf5397b049e5df47cbbf32ec3d187c355e13e7d20b3665da9b4e4378dcd820fbb73a3808bc83724542c79975ee742a14dd10f4067f44e49541a8e86799', overwrite=True)\n",
+    "IBMQ.save_account('', overwrite=True)\n",
     "provider = IBMQ.load_account()\n",
     "\n",
     "import numpy as np\n",
