Adding methods for automating our notebook.

--- a/Qiskit Summer School Final Project VQE.ipynb
+++ b/Qiskit Summer School Final Project VQE.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ibmqfactory.load_account:WARNING:2020-08-05 23:06:49,909: Credentials are already in use. The existing account in the session will be replaced.\n"
+      "ibmqfactory.load_account:WARNING:2020-08-06 13:27:03,197: Credentials are already in use. The existing account in the session will be replaced.\n"
      ]
     }
    ],
@@ -61,63 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "inter_dist = 1.5108585"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-4.74672736  0.10910944  0.16802524  0.          0.         -0.02676891\n",
-      "   0.          0.          0.          0.          0.          0.        ]\n",
-      " [ 0.10910944 -1.52771478  0.0353301   0.          0.         -0.07955265\n",
-      "   0.          0.          0.          0.          0.          0.        ]\n",
-      " [ 0.16802524  0.0353301  -1.1317496   0.          0.          0.0321057\n",
-      "   0.          0.          0.          0.          0.          0.        ]\n",
-      " [ 0.          0.          0.         -1.14428889  0.          0.\n",
-      "   0.          0.          0.          0.          0.          0.        ]\n",
-      " [ 0.          0.          0.          0.         -1.14428889  0.\n",
-      "   0.          0.          0.          0.          0.          0.        ]\n",
-      " [-0.02676891 -0.07955265  0.0321057   0.          0.         -0.93545574\n",
-      "   0.          0.          0.          0.          0.          0.        ]\n",
-      " [ 0.          0.          0.          0.          0.          0.\n",
-      "  -4.74672736  0.10910944  0.16802524  0.          0.         -0.02676891]\n",
-      " [ 0.          0.          0.          0.          0.          0.\n",
-      "   0.10910944 -1.52771478  0.0353301   0.          0.         -0.07955265]\n",
-      " [ 0.          0.          0.          0.          0.          0.\n",
-      "   0.16802524  0.0353301  -1.1317496   0.          0.          0.0321057 ]\n",
-      " [ 0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.          0.         -1.14428889  0.          0.        ]\n",
-      " [ 0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.          0.          0.         -1.14428889  0.        ]\n",
-      " [ 0.          0.          0.          0.          0.          0.\n",
-      "  -0.02676891 -0.07955265  0.0321057   0.          0.         -0.93545574]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "molecular_coordinates = 'Li 0 0 0; H ' + str(inter_dist) + ' 0 0'\n",
-    "\n",
-    "distance_unit = UnitsType.ANGSTROM\n",
-    "\n",
-    "basis = 'sto3g'\n",
-    "\n",
-    "driver = PySCFDriver(molecular_coordinates, unit=distance_unit)\n",
-    "\n",
-    "molecule = driver.run()\n",
-    "\n",
-    "h1 = molecule.one_body_integrals\n",
-    "\n",
-    "print(h1)"
+    "driver = PySCFDriver(atom='Li .0 .0 .0; H .0 .0' + str(inter_dist), unit=UnitsType.ANGSTROM, charge=0, spin=0, basis='sto3g')"
    ]
   },
   {
@@ -129,12 +77,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# please be aware that the idx here with respective to original idx\n",
-    "freeze_list = [0, 6]\n",
+    "freeze_list = [0]\n",
     "remove_list = [-3, -2] # negative number denotes the reverse order"
    ]
   },
@@ -147,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +295,7 @@
     "    h2 = molecule.two_body_integrals\n",
     "    nuclear_repulsion_energy = molecule.nuclear_repulsion_energy\n",
     "    \n",
-    "    num_particles = molecule.num_alpha + molecule.num_beta\n",
+    "    num_particles = [molecule.num_alpha, molecule.num_beta]\n",
     "    num_spin_orbitals = molecule.num_orbitals * 2\n",
     "    print(\"HF energy: {}\".format(molecule.hf_energy - molecule.nuclear_repulsion_energy))\n",
     "    print(\"# of electrons: {}\".format(num_particles))\n",
@@ -392,11 +340,11 @@
     "ref = exact_solver(qubitOp)\n",
     "\n",
     "# Specify your initial state\n",
-    "init_state = HartreeFock(num_orbitals=4, num_particles=2, qubit_mapping='parity')\n",
+    "init_state = HartreeFock(num_orbitals=num_spin_orbitals, num_particles=num_particles, qubit_mapping='parity')\n",
     "\n",
     "# Select a state preparation ansatz\n",
     "# Equivalently, choose a parameterization for our trial wave function.\n",
-    "var_form = UCCSD(num_orbitals=4, num_particles=2, qubit_mapping='parity',\n",
+    "var_form = UCCSD(num_orbitals=num_spin_orbitals, num_particles=num_particles, qubit_mapping='parity',\n",
     "                      excitation_type='s', method_singles='beta',\n",
     "                      initial_state=init_state, two_qubit_reduction=False, reps=2)\n",
     "\n",
