--- a/QiskitSummerSchoolFinalProjectVQE.ipynb
+++ b/QiskitSummerSchoolFinalProjectVQE.ipynb
@@ -124,7 +124,7 @@
     "from qiskit.providers.aer.noise.errors import thermal_relaxation_error\n",
     "\n",
     "from qiskit.providers.aer import noise\n",
-    "IBMQ.save_account('44165d7f1d63c3c9592827fd8f48c1ddf6a961eb5de3dcb0483b89ef3293e4fe0b1a1f313aafefb72640b1292e6e1afe81bd22ef7929a47f177073a12b3edd71', overwrite=True)\n",
+    "IBMQ.save_account('', overwrite=True)\n",
     "provider = IBMQ.load_account()\n",
     "\n",
     "import numpy as np\n",
