--- a/Qiskit Summer School Final Project VQE.ipynb
+++ b/Qiskit Summer School Final Project VQE.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ibmqfactory.load_account:WARNING:2020-08-06 13:27:03,197: Credentials are already in use. The existing account in the session will be replaced.\n"
+      "ibmqfactory.load_account:WARNING:2020-08-06 22:25:27,379: Credentials are already in use. The existing account in the session will be replaced.\n"
      ]
     }
    ],
    "source": [
     "from qiskit import BasicAer, Aer, IBMQ\n",
     "from qiskit.aqua import QuantumInstance, aqua_globals\n",
-    "from qiskit.aqua.algorithms import VQE, ExactEigensolver\n",
+    "from qiskit.aqua.algorithms import VQE, ExactEigensolver, NumPyEigensolver\n",
     "from qiskit.aqua.components.initial_states import Zero\n",
     "from qiskit.aqua.components.optimizers import COBYLA, L_BFGS_B, SLSQP, SPSA, CRS\n",
     "from qiskit.aqua.components.variational_forms import RY, RYRZ, SwapRZ\n",
@@ -34,8 +34,16 @@
     "from qiskit.providers.aer.noise.errors import thermal_relaxation_error\n",
     "\n",
     "from qiskit.providers.aer import noise\n",
-    "IBMQ.save_account('', overwrite=True)\n",
-    "provider = IBMQ.load_account()\n",
+    "\n",
+    "from qiskit.tools.monitor import job_monitor\n",
+    "\n",
+    "from qiskit.providers.ibmq import least_busy\n",
+    "\n",
+    "import warnings\n",
+    "\n",
+    "IBMQ.load_account()\n",
+    "provider = IBMQ.get_provider(group='open')\n",
+    "backend = least_busy(provider.backends(simulator=False, operational=True))\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -61,10 +69,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "inter_dist = 1.5108585\n",
     "driver = PySCFDriver(atom='Li .0 .0 .0; H .0 .0' + str(inter_dist), unit=UnitsType.ANGSTROM, charge=0, spin=0, basis='sto3g')"
    ]
   },
@@ -77,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -261,15 +270,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-10-7cd93c7b6cd5>, line 71)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-7cd93c7b6cd5>\"\u001b[0;36m, line \u001b[0;32m71\u001b[0m\n\u001b[0;31m    var_form =\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# of electrons: 4\n",
+      "# of spin orbitals: 12\n",
+      "Reference value: 0.6401176053547615\n",
+      "VQE value:  0.64015669218553\n",
+      "VQE energy:  -7.700397515388754\n",
+      "HF energy: -7.863382128457063\n"
      ]
     }
    ],
@@ -283,93 +298,98 @@
     "    print('Reference value: {}'.format(ref))\n",
     "    return ref\n",
     "\n",
+    "counts = []\n",
+    "values = []\n",
+    "params = []\n",
+    "deviation = []\n",
+    "def store_intermediate_result(eval_count, parameters, mean, std):\n",
+    "    counts.append(eval_count)\n",
+    "    values.append(mean)\n",
+    "    params.append(parameters)\n",
+    "    deviation.append(std)\n",
+    "\n",
     "# Define your function for computing the qubit operations of LiH\n",
     "def compute_LiH_qubitOp(map_type, inter_dist, basis='sto3g'):\n",
     "    \n",
     "    # Specify details of our molecule\n",
-    "    driver = PySCFDriver(atom='Li .0 .0 .0; H .0 .0 ' + str(inter_dist), unit=UnitsType.ANGSTROM, charge=0, spin=0, basis=basis)\n",
+    "    driver = PySCFDriver(atom='Li 0 0 0; H 0 0 ' + str(inter_dist), unit=UnitsType.ANGSTROM, charge=0, spin=0, basis=basis)\n",
     "\n",
     "    # Compute relevant 1 and 2 body integrals.\n",
     "    molecule = driver.run()\n",
     "    h1 = molecule.one_body_integrals\n",
     "    h2 = molecule.two_body_integrals\n",
+    "    \n",
+    "    num_particles = molecule.num_alpha + molecule.num_beta\n",
+    "    num_spin_orbitals = molecule.num_orbitals * 2\n",
     "    nuclear_repulsion_energy = molecule.nuclear_repulsion_energy\n",
     "    \n",
-    "    num_particles = [molecule.num_alpha, molecule.num_beta]\n",
-    "    num_spin_orbitals = molecule.num_orbitals * 2\n",
-    "    print(\"HF energy: {}\".format(molecule.hf_energy - molecule.nuclear_repulsion_energy))\n",
     "    print(\"# of electrons: {}\".format(num_particles))\n",
     "    print(\"# of spin orbitals: {}\".format(num_spin_orbitals))\n",
     "\n",
     "    # Please be aware that the idx here with respective to original idx\n",
-    "    freeze_list = [0]\n",
-    "    remove_list = [-3, -2] # negative number denotes the reverse order\n",
+    "    freeze_list = [0,1,6,7]\n",
+    "    remove_list = [0,1,4,5] # negative number denotes the reverse order\n",
     "    \n",
     "    # Prepare full idx of freeze_list and remove_list\n",
     "    # Convert all negative idx to positive\n",
-    "    remove_list = [x % molecule.num_orbitals for x in remove_list]\n",
-    "    freeze_list = [x % molecule.num_orbitals for x in freeze_list]\n",
     "    \n",
-    "    # Update the idx in remove_list of the idx after frozen, since the idx of orbitals are changed after freezing\n",
-    "    remove_list = [x - len(freeze_list) for x in remove_list]\n",
-    "    remove_list += [x + molecule.num_orbitals - len(freeze_list)  for x in remove_list]\n",
-    "    freeze_list += [x + molecule.num_orbitals for x in freeze_list]\n",
+    "    num_spin_orbitals -= len(remove_list)\n",
     "\n",
     "    # Prepare fermionic hamiltonian with orbital freezing and eliminating, and then map to qubit hamiltonian\n",
     "    # and if PARITY mapping is selected, reduction qubits\n",
     "    energy_shift = 0.0\n",
     "    qubit_reduction = True if map_type == 'parity' else False\n",
-    "\n",
     "    ferOp = FermionicOperator(h1=h1, h2=h2)\n",
     "    if len(freeze_list) > 0:\n",
     "        ferOp, energy_shift = ferOp.fermion_mode_freezing(freeze_list)\n",
     "        num_spin_orbitals -= len(freeze_list)\n",
-    "        num_particles -= len(freeze_list)\n",
-    "    if len(remove_list) > 0:\n",
+    "        num_particles -= len(freeze_list)//2\n",
+    "    if len(freeze_list) > 0:\n",
     "        ferOp = ferOp.fermion_mode_elimination(remove_list)\n",
-    "        num_spin_orbitals -= len(remove_list)\n",
+    "    qubitOp = ferOp.mapping(map_type)\n",
+    "    qubitOp = Z2Symmetries.two_qubit_reduction(qubitOp, num_particles)\n",
+    "    return qubitOp, num_spin_orbitals, num_particles, qubit_reduction, molecule, energy_shift, nuclear_repulsion_energy\n",
     "\n",
-    "    qubitOp = ferOp.mapping(map_type=map_type)\n",
-    "    qubitOp = Z2Symmetries.two_qubit_reduction(qubitOp, num_particles) if qubit_reduction else qubitOp\n",
-    "    qubitOp.chop(10**-10)\n",
+    "map_type = \"parity\"\n",
+    "qubitOp, num_spin_orbitals, num_particles, qubit_reduction, molecule, energy_shift, nuclear_repulsion_energy = compute_LiH_qubitOp(map_type, inter_dist)\n",
     "\n",
-    "    return qubitOp, num_spin_orbitals, num_particles, qubit_reduction\n",
-    "\n",
-    "qubitOp, num_spin_orbitals, num_particles, qubit_reduction = compute_LiH_qubitOp(map_type)\n",
     "# Classically solve for the exact solution and use that as your reference value\n",
     "ref = exact_solver(qubitOp)\n",
     "\n",
     "# Specify your initial state\n",
-    "init_state = HartreeFock(num_orbitals=num_spin_orbitals, num_particles=num_particles, qubit_mapping='parity')\n",
+    "init_state = HartreeFock(num_spin_orbitals, num_particles, qubit_mapping=map_type)\n",
     "\n",
     "# Select a state preparation ansatz\n",
     "# Equivalently, choose a parameterization for our trial wave function.\n",
-    "var_form = UCCSD(num_orbitals=num_spin_orbitals, num_particles=num_particles, qubit_mapping='parity',\n",
-    "                      excitation_type='s', method_singles='beta',\n",
-    "                      initial_state=init_state, two_qubit_reduction=False, reps=2)\n",
+    "UCCSD_var_form = UCCSD(num_orbitals=num_spin_orbitals, num_particles=num_particles, qubit_mapping=map_type,\n",
+    "                       initial_state=init_state, two_qubit_reduction=qubit_reduction, reps=2)\n",
     "\n",
     "# Choose where to run/simulate our circuit\n",
-    "quantum_instance = Aer.get_backend('qasm_simulator')\n",
+    "quantum_instance = backend\n",
     "\n",
+    "max_eval = 1000\n",
     "# Choose the classical optimizer\n",
-    "optimizer = \n",
+    "optimizer = SPSA(max_eval)\n",
     "\n",
-    "# Run your VQE instance\n",
-    "vqe = VQE(qubitOp, var_form, optimizer)\n",
-    "\n",
-    "# Now compare the results of different compositions of your VQE algorithm!"
+    "warnings.filterwarnings(\"ignore\")\n",
+    "vqe = VQE(qubitOp, UCCSD_var_form, optimizer, callback=store_intermediate_result)\n",
+    "# Now compare the results of different compositions of your VQE algorithm!\n",
+    "print(\"VQE value: \", np.real(vqe.run(backend)['eigenvalue']))\n",
+    "vqe_result = np.real(energy_shift + vqe.run(backend)['eigenvalue'])\n",
+    "print(\"VQE energy: \", np.real(vqe_result))\n",
+    "print(\"HF energy: {}\".format(molecule.hf_energy))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<h3>Version Information</h3><table><tr><th>Qiskit Software</th><th>Version</th></tr><tr><td>Qiskit</td><td>0.19.6</td></tr><tr><td>Terra</td><td>0.14.2</td></tr><tr><td>Aer</td><td>0.5.2</td></tr><tr><td>Ignis</td><td>0.3.3</td></tr><tr><td>Aqua</td><td>0.7.3</td></tr><tr><td>IBM Q Provider</td><td>0.7.2</td></tr><tr><th>System information</th></tr><tr><td>Python</td><td>3.8.3 (default, May 19 2020, 13:54:14) \n",
-       "[Clang 10.0.0 ]</td></tr><tr><td>OS</td><td>Darwin</td></tr><tr><td>CPUs</td><td>4</td></tr><tr><td>Memory (Gb)</td><td>16.0</td></tr><tr><td colspan='2'>Thu Jul 23 13:53:19 2020 EDT</td></tr></table>"
+       "<h3>Version Information</h3><table><tr><th>Qiskit Software</th><th>Version</th></tr><tr><td>Qiskit</td><td>0.19.0</td></tr><tr><td>Terra</td><td>0.14.0</td></tr><tr><td>Aer</td><td>0.5.1</td></tr><tr><td>Ignis</td><td>0.3.0</td></tr><tr><td>Aqua</td><td>0.7.0</td></tr><tr><td>IBM Q Provider</td><td>0.7.0</td></tr><tr><th>System information</th></tr><tr><td>Python</td><td>3.6.9 (default, Apr 18 2020, 01:56:04) \n",
+       "[GCC 8.4.0]</td></tr><tr><td>OS</td><td>Linux</td></tr><tr><td>CPUs</td><td>4</td></tr><tr><td>Memory (Gb)</td><td>15.904891967773438</td></tr><tr><td colspan='2'>Thu Aug 06 19:44:37 2020 EDT</td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -396,6 +416,13 @@
     "%qiskit_version_table\n",
     "%qiskit_copyright"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -403,18 +430,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.9"
   }
  },
  "nbformat": 4,
