--- a/Qiskit Summer School Final Project VQE.ipynb
+++ b/Qiskit Summer School Final Project VQE.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ibmqfactory.load_account:WARNING:2020-08-06 22:25:27,379: Credentials are already in use. The existing account in the session will be replaced.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from qiskit import BasicAer, Aer, IBMQ\n",
     "from qiskit.aqua import QuantumInstance, aqua_globals\n",
@@ -69,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -281,10 +273,17 @@
      "text": [
       "# of electrons: 4\n",
       "# of spin orbitals: 12\n",
-      "Reference value: 0.6401176053547615\n",
-      "VQE value:  0.64015669218553\n",
-      "VQE energy:  -7.700397515388754\n",
-      "HF energy: -7.863382128457063\n"
+      "Reference value: 0.6401176053547554\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/simplicity/.local/lib/python3.6/site-packages/qiskit/aqua/algorithms/eigen_solvers/numpy_eigen_solver.py:242: DeprecationWarning: Deprecated class ExactEigensolver, use NumPyEigensolver.\n",
+      "  DeprecationWarning)\n",
+      "/home/simplicity/.local/lib/python3.6/site-packages/qiskit/aqua/algorithms/eigen_solvers/eigen_solver_result.py:64: DeprecationWarning: energy deprecated, use eigenvalues property.\n",
+      "  warnings.warn('energy deprecated, use eigenvalues property.', DeprecationWarning)\n"
      ]
     }
    ],
@@ -367,17 +366,20 @@
     "# Choose where to run/simulate our circuit\n",
     "quantum_instance = backend\n",
     "\n",
-    "max_eval = 1000\n",
+    "max_eval = 10000\n",
     "# Choose the classical optimizer\n",
     "optimizer = SPSA(max_eval)\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "vqe = VQE(qubitOp, UCCSD_var_form, optimizer, callback=store_intermediate_result)\n",
+    "vqe_eigenvalue = np.real(vqe.run(backend)['eigenvalue'])\n",
     "# Now compare the results of different compositions of your VQE algorithm!\n",
-    "print(\"VQE value: \", np.real(vqe.run(backend)['eigenvalue']))\n",
-    "vqe_result = np.real(energy_shift + vqe.run(backend)['eigenvalue'])\n",
-    "print(\"VQE energy: \", np.real(vqe_result))\n",
-    "print(\"HF energy: {}\".format(molecule.hf_energy))"
+    "print(\"VQE value: \", vqe_eigenvalue)\n",
+    "vqe_result = np.real(energy_shift + vqe_eigenvalue)\n",
+    "print(\"VQE energy: \", vqe_result)\n",
+    "print(\"HF energy: {}\".format(molecule.hf_energy))\n",
+    "print(\"Reference Value Percent Error: \" + str(abs((vqe_eigenvalue-ref)/ref)*100) + \"%\")\n",
+    "print(\"Energy Value Percent Error: \" + str(np.real(abs((vqe_result-molecule.hf_energy)/molecule.hf_energy))*100) + \"%\")"
    ]
   },
   {
@@ -430,6 +432,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
